# jflash

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  MVP.md  PRD.md  README.md  docker-compose.yml  package-lock.json  package.json  schema.sql
.github/workflows/: sync-supabase.yml
_bmad-output/: CODEX_DEV_PROMPT.md
_bmad-output/implementation-artifacts/: 1-1-backend-project-init.md  1-2-frontend-project-init.md  1-3-database-schema-creation.md  2-1-image-upload-api.md  2-2-ocr-text-recognition.md  2-3-morphological-analysis.md  2-4-extracted-words-ui.md  2-5-manual-correction-interface.md  3-1-word-add.md  3-2-word-edit-delete.md  3-3-word-search-filter.md  3-4-source-image-link.md  4-1-today-review-cards.md  4-2-flashcard-front-back.md  4-3-answer-submission.md  4-4-srs-algorithm.md  (+14 more)
backend/: Dockerfile  database.py  init_db.py  main.py  pyproject.toml  requirements-lite.txt  requirements.txt
backend/api/: export_import.py  grammar.py  kanji.py  morphology.py  ocr.py  review.py  schemas.py  stats.py  upload.py  vocab.py
backend/models/: __init__.py  grammar.py  kanji.py  study_log.py  vocabulary.py
backend/services/: kanji_service.py  morphology_service.py  nlp_service.py  ocr_service.py  ocr_validation.py
data/: sentences_p021.sql
docs/: NAS_DEPLOYMENT.md  TODO_IMPROVEMENTS.md  debug-patterns.md  state-machine-diagrams.md
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
scripts/: archive-mastered.ts  export_to_json.py  split-vocabulary.ts  sync-db-to-nas.sh  sync-to-supabase.ts
supabase/: schema.sql
(+31 files in other folders)
