[project]
name = "j-flash-backend"
version = "0.1.0"
description = "Japanese Learning App Backend - OCR-powered vocabulary extraction with SRS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "easyocr>=1.7.1",
    "fugashi>=1.3.0",
    "unidic-lite>=1.0.8",
    "pillow>=10.2.0",
    "opencv-python-headless>=4.9.0.80",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.mypy]
python_version = "3.10"
strict = true
